Added payment token balance tracking/display and random article purchasing.

--- a/demos/oauth/news/screen.css
+++ b/demos/oauth/news/screen.css
@@ -9,6 +9,11 @@ body {
   text-align: center; 
 }
 
+pre {
+  font-size: 75%;
+  line-height: 1em;
+}
+
 /* obecne odkazy --------------------------------------------------------------- */
 a {color:#0f710f;}
 a:link {color:#0f710f;}
@@ -92,7 +97,6 @@ h5 { font-size:100%; }
       /* set millions of background images */
       .rbroundbox { background: #0e6c0e url('img/main.jpg') no-repeat; }
       .rbtop div { background: url('img/tl.gif') no-repeat top left; }
-      .rbtop { background: url('img/tr.gif') no-repeat top right; }
       .rbbot div { background: url('img/bl.gif') no-repeat bottom left; }
       .rbbot { background: url('img/br.gif') no-repeat bottom right; clear: both; }
 
