--- a/slides/2013/template/template.html
+++ b/slides/2013/template/template.html
@@ -20,12 +20,12 @@
 	<div id="nav">
 		<div id="title">
 			<h1>Template Title</h1>
-			<h2>by <a href="http://manu.sporny.org/" onclick="window.open(this.href); return false;">Manu Sporny</a></h2>
-			<h2>Digital Bazaar / Meritora / PaySwarm</h2>
+			<h2>by <a href="http://www.linkedin.com/in/manusporny" onclick="window.open(this.href); return false;">Manu Sporny</a></h2>
+			<h2>| <a href="http://www.w3.org/community/webpayments/" onclick="window.open(this.href); return false;">Web Payments</a> | <a href="http://meritora.com/" onclick="window.open(this.href); return false;">Meritora</a> | <a href="https://payswarm.com/" onclick="window.open(this.href); return false;">PaySwarm</a> | <a href="http://digitalbazaar.com/" onclick="window.open(this.href); return false;">Digital Bazaar</a></h2>
 		</div>
 		<ul class="slidenav">
-			<li><a id="prevButton" href="#">previous</a></li>
-			<li><a id="nextButton" href="#">next</a></li>
+			<li><a id="prevButton" href="#">&vltri; previous</a></li>
+			<li><a id="nextButton" href="#">next &vrtri;</a></li>
 		</ul>
 	</div> <!-- footer -->
 	
@@ -36,19 +36,16 @@
 			<div class="slide cover current">
 				<section class="center intro">
 					<h1>Template</h1>
-					<h2>Digital Bazaar / PaySwarm / Meritora</h2>
+					<h2><a href="http://www.w3.org/community/webpayments/" onclick="window.open(this.href); return false;">Web Payments</a>  | <a href="https://payswarm.com/" onclick="window.open(this.href); return false;">PaySwarm</a> | <a href="http://meritora.com/" onclick="window.open(this.href); return false;">Meritora</a></h2>
 					<div class="instructions-screen">
-						<p>This presentation is an HTML5 page.</p>
-						<p>Press <span class="key">→</span> key to advance.</p>
+						<p>Slide navigation:</p>
+						<p>Press <span class="key">&rarr;</span> key to advance.</p>
 						<p>Toggle notes with the  <span class="key">2</span> key.</p>
 						<p>Zoom in/out: <span class="key">Ctrl or Command</span> + <span class="key">+/-</span></p>
 					</div>
 					<div class="instructions-print">
 						<p>This presentation was printed from an HTML page.</p>
 						<p>A fully interactive version of these slides containing examples and links to further resources can be found at:<br>http://payswarm.com/slides/.</p>
-					</div>
-					<div class="credit">
-						<p>This page is based on the HTML5 Slideshow by Marcin Wichary, Ernest Delgado, Alex Russell, and Brad Neuberg:<br><a href="http://apirocks.com/html5/html5.html" onclick="window.open(this.href); return false;">http://apirocks.com/html5/html5.html</a>. It uses CSS additions by Matthew Richmond.</p>
 					</div>
 				</section>
 			</div>
@@ -108,6 +105,9 @@
 							<li>The Presenter</li>
 							<li><a href="http://payswarm.com/" onclick="window.open(this.href); return false;">http://payswarm.com</a>.</li>
 						</ul>
+		  			<div class="credit">
+	  					<p>This slide deck is based on HTML5 Slideshow by Marcin Wichary, Ernest Delgado, Alex Russell, and Brad Neuberg with CSS additions by Matthew Richmond and Manu Sporny.</p>
+  					</div>
 					</section>
 					<!-- <div class="notes">
 						<h3>Notes:</h3>
