Favicon updates and unification of header/footer.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,6 +66,17 @@ body {
 }
 
 /*
+ * Make sure the navbar logo has special properties
+ */
+.navbar-brand {
+    padding: 8px 8px;
+}
+
+.navbar-logo {
+    background: transparent;
+}
+
+/*
  * Allow only vertical resizing of textareas.
  */
 
