Rework flow for SemTech 2014 slide deck.

--- a/slides/2014/semtech/css/styles.css
+++ b/slides/2014/semtech/css/styles.css
@@ -542,6 +542,7 @@ div.slide.trust {
 div.slide.payments {
 	background: url(../images/payments.jpg) 10px 10px no-repeat #000;
 	background-position: center;
+	background-size: cover;
 }
 
 div.slide.steps {
